Fixed text nowrap on entries lists Added tests for showAlert() Removed useless imports

--- a/src/theme/core.scss
+++ b/src/theme/core.scss
@@ -630,7 +630,7 @@ textarea {
     margin-top: -15px !important;
 }
 .unwrap-fix {
-    text-wrap: nowrap !important;
+    white-space: nowrap !important;
     overflow: hidden !important;
     text-overflow: ellipsis !important;
 }
